Added correct image source

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             </td>
             <td>
-                <img src="C:\Users\rites\Desktop\WEB DEV\HTML BASICS\RITESH SHARMA IMG.png" alt="Ritesh Sharma"  width="200"
+                <img src="https://github.com/RiteshS1/myself/blob/main/RITESH%20SHARMA%20IMG.png?raw=true" alt="Ritesh Sharma"  width="200"
                 height="200">
             </td>
         </tr>
