--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p><b>AND RATHER THAN JUST STRESSING ON ALMOST EVERYTHING; I'VE STARTED ACCEPTING THINGS AS THEY ARE!<br></p><p><i>!ALL THE MORE I'VE STARTED BEING MYSELF!</i></b>
     </p>
     <hr size="5" color="red">
-    <a href="C:\Users\rites\Desktop\WEB DEV\HTML BASICS\futureplans.html"><h2><u>MY FUTURE PLANS....</u></h2></a><br> 
+    <a href="https://github.com/RiteshS1/myself/blob/main/futureplans.html"><h2><u>MY FUTURE PLANS....</u></h2></a><br> 
    
     <hr size ="5" color="red">
     <h2><u>APOLOGY</u></h2>
