--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p><b>AND RATHER THAN JUST STRESSING ON ALMOST EVERYTHING; I'VE STARTED ACCEPTING THINGS AS THEY ARE!<br></p><p><i>!ALL THE MORE I'VE STARTED BEING MYSELF!</i></b>
     </p>
     <hr size="5" color="red">
-    <a href="https://github.com/RiteshS1/myself/blob/main/futureplans.html"><h2><u>MY FUTURE PLANS....</u></h2></a><br> 
+    <a href="myself/blob/main/futureplans.html"><h2><u>MY FUTURE PLANS....</u></h2></a><br> 
    
     <hr size ="5" color="red">
     <h2><u>APOLOGY</u></h2>
@@ -49,7 +49,7 @@
     <p>I JUST WANTED SOME CONTENT FOR MY FIRST WEBSITE: SO I THOUGHT WHAT ELSE CAN BE BETTER THAT WRITING ABOUT MY SELF!
     </p><p>I DON'T SAY THIS MUCH BUT YA I'M SORRY FOR WASTING YOUR TIME.YOU WOULD HAVE SURELY HAD UNIMAGINABLE PAIN READING THIS STUFF BUT PLEASE TAKE SOME MORE PAIN AND DO FILL OUT THE FORM THAT I'VE CREATED BY CLICKING ON THE "CONNECT WITH ME" SECTION.</p>
     <hr size="5"color='red'>
-    <h4><a href="https://github.com/RiteshS1/myself/blob/main/connect.html">CONNECT WITH ME</a></h4>
+    <h4><a href="myself/blob/main/connect.html">CONNECT WITH ME</a></h4>
     <h5><a href="https://i.pinimg.com/originals/34/0c/5a/340c5a4878082e690398744e0173fdc9.gif"><b><i>THANK YOU</i></b></a></h5>
 
 
