--- a/futureplans.html
+++ b/futureplans.html
@@ -11,7 +11,7 @@
     <hr size ="5" color="red">
 
     <p>Ha ha ha😂, If any of you reading this know me well-enough : You would be knowing that I don't like Planning much about THE FUTURE OR PAST AND EVEN THE PRESENT :)</p>
-    <p><i><b>MY MATRA IS SIMPLE : JUST LIVE IN THE MOMENT AND ENJOY n EXPERIENCE EVERYTHING YOU CAN!😌</b></i></p>
+    <p><i><b>MY MANTRA IS SIMPLE : JUST LIVE IN THE MOMENT AND ENJOY n EXPERIENCE EVERYTHING YOU CAN!😌</b></i></p>
     <hr size ="5" color="red">
     <center>
         <img src="https://media.tenor.com/C4DEXUewdHoAAAAM/hi-smile.gif" width="400" height="400" >
