--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <hr size ="5" color="red">
     <h2><u>APOLOGY</u></h2>
     <p>WELL CONGRATS! IF YOU HAVE COME THIS FAR READING EVERYTHING(WITHOUT SKIPPING😏)</p>
-    <p>I JUST WANTED SOME CONTENT FOR MY FIRST WEBSITE: SO I THOUGHT WHAT ELSE CAN BE BETTER THAT WRITING ABOUT MY SELF!
-    </p><p>I DON'T SAY THIS MUCH BUT YA I'M SORRY FOR WASTING YOUR TIME.YOU WOULD HAVE SURELY HAD UNIMAGINABLE PAIN READING THIS STUFF BUT PLEASE TAKE SOME MORE PAIN AND DO FILL OUT THE FORM THAT I'VE CREATED BY CLICKING ON THE "CONNECT WITH ME" SECTION.</p>
+    <p>I JUST WANTED SOME CONTENT FOR MY FIRST WEBSITE: SO I THOUGHT WHAT ELSE CAN BE BETTER THAN WRITING ABOUT MY SELF!
+    </p><p>I DON'T SAY THIS WORD MUCH BUT YA I'M SORRY FOR WASTING YOUR TIME.YOU WOULD HAVE SURELY HAD UNIMAGINABLE PAIN READING THIS STUFF BUT PLEASE TAKE SOME MORE PAIN AND DO FILL OUT THE FORM THAT I'VE CREATED BY CLICKING ON THE "CONNECT WITH ME" SECTION.</p>
     <hr size="5"color='red'>
     <h4><a href="connect.html">CONNECT WITH ME</a></h4>
     <h5><a href="https://i.pinimg.com/originals/34/0c/5a/340c5a4878082e690398744e0173fdc9.gif"><b><i>THANK YOU</i></b></a></h5>
